src/main/java/org/piccode/antlr4/PiccodeScriptParser.java
// Generated from PiccodeScript.g4 by ANTLR 4.9.3

	package org.piccode.antlr4;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PiccodeScriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ADD=1, SUB=2, MUL=3, DIV=4, MOD=5, GT=6, GE=7, LT=8, LE=9, EQ=10, NE=11, 
		AND=12, OR=13, SHL=14, SHR=15, BAND=16, BOR=17, EXCLAIM=18, PIPE=19, CC=20, 
		LBRACE=21, RBRACE=22, LPAREN=23, RPAREN=24, LBRACKET=25, RBRACKET=26, 
		COLON=27, COMMA=28, SEMI=29, ARROW=30, TILDE=31, ASSIGN=32, DASSIGN=33, 
		WHEN=34, IMPORT=35, IS=36, IF=37, ELSE=38, MODULE=39, DO=40, USE=41, RETURN_TOK=42, 
		CATCH_TOK=43, NUMBER=44, STRING=45, DOT=46, LINE_COMMENT=47, BLOCK_COMMENT=48, 
		ID=49, WS=50;
	public static final int
		RULE_stmts = 0, RULE_stmt = 1, RULE_import_module = 2, RULE_module_path = 3, 
		RULE_symbol_lift = 4, RULE_symbol_entry = 5, RULE_declaration = 6, RULE_module = 7, 
		RULE_module_stmts = 8, RULE_module_stmt = 9, RULE_func = 10, RULE_func_args = 11, 
		RULE_arg_list = 12, RULE_arg = 13, RULE_expr_stmt = 14, RULE_expr = 15, 
		RULE_closure_decl = 16, RULE_unary = 17, RULE_if_expr = 18, RULE_when_expr = 19, 
		RULE_when_cases = 20, RULE_when_case = 21, RULE_else_case = 22, RULE_var_decl = 23, 
		RULE_tuple = 24, RULE_array = 25, RULE_object = 26, RULE_expr_list = 27, 
		RULE_call_expr_list = 28, RULE_call_expr = 29, RULE_key_val_pair = 30, 
		RULE_key_val_pairs = 31, RULE_do_expr = 32;
	private static String[] makeRuleNames() {
		return new String[] {
			"stmts", "stmt", "import_module", "module_path", "symbol_lift", "symbol_entry", 
			"declaration", "module", "module_stmts", "module_stmt", "func", "func_args", 
			"arg_list", "arg", "expr_stmt", "expr", "closure_decl", "unary", "if_expr", 
			"when_expr", "when_cases", "when_case", "else_case", "var_decl", "tuple", 
			"array", "object", "expr_list", "call_expr_list", "call_expr", "key_val_pair", 
			"key_val_pairs", "do_expr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'+'", "'-'", "'*'", "'/'", "'%'", "'>'", "'>='", "'<'", "'<='", 
			"'=='", "'!='", "'&&'", "'||'", "'>>'", "'<<'", "'&'", "'|'", "'!'", 
			"'|>'", "'::'", "'{'", "'}'", "'('", "')'", "'['", "']'", "':'", "','", 
			"';'", "'->'", "'~'", "'='", "':='", "'when'", "'import'", "'is'", "'if'", 
			"'else'", "'module'", "'do'", "'use'", "'return'", "'catch'", null, null, 
			"'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ADD", "SUB", "MUL", "DIV", "MOD", "GT", "GE", "LT", "LE", "EQ", 
			"NE", "AND", "OR", "SHL", "SHR", "BAND", "BOR", "EXCLAIM", "PIPE", "CC", 
			"LBRACE", "RBRACE", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "COLON", 
			"COMMA", "SEMI", "ARROW", "TILDE", "ASSIGN", "DASSIGN", "WHEN", "IMPORT", 
			"IS", "IF", "ELSE", "MODULE", "DO", "USE", "RETURN_TOK", "CATCH_TOK", 
			"NUMBER", "STRING", "DOT", "LINE_COMMENT", "BLOCK_COMMENT", "ID", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PiccodeScript.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PiccodeScriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StmtsContext extends ParserRuleContext {
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public TerminalNode EOF() { return getToken(PiccodeScriptParser.EOF, 0); }
		public StmtsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmts; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PiccodeScriptListener ) ((PiccodeScriptListener)listener).enterStmts(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PiccodeScriptListener ) ((PiccodeScriptListener)listener).exitStmts(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PiccodeScriptVisitor ) return ((PiccodeScriptVisitor<? extends T>)visitor).visitStmts(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtsContext stmts() throws RecognitionException {
		StmtsContext _localctx = new StmtsContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_stmts);
		int _la;
		try {
			setState(73);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SUB) | (1L << BAND) | (1L << BOR) | (1L << EXCLAIM) | (1L << LBRACE) | (1L << LPAREN) | (1L << LBRACKET) | (1L << TILDE) | (1L << WHEN) | (1L << IMPORT) | (1L << IF) | (1L << DO) | (1L << RETURN_TOK) | (1L << NUMBER) | (1L << STRING) | (1L << ID))) != 0)) {
					{
					{
					setState(66);
					stmt();
					}
					}
					setState(71);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public Import_moduleContext import_module() {
			return getRuleContext(Import_moduleContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public Expr_stmtContext expr_stmt() {
			return getRuleContext(Expr_stmtContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PiccodeScriptListener ) ((PiccodeScriptListener)listener).enterStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PiccodeScriptListener ) ((PiccodeScriptListener)listener).exitStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PiccodeScriptVisitor ) return ((PiccodeScriptVisitor<? extends T>)visitor).visitStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stmt);
		try {
			setState(78);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(75);
				import_module();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(76);
				declaration();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(77);
				expr_stmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Import_moduleContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(PiccodeScriptParser.IMPORT, 0); }
		public Module_pathContext module_path() {
			return getRuleContext(Module_pathContext.class,0);
		}
		public Import_moduleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_module; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PiccodeScriptListener ) ((PiccodeScriptListener)listener).enterImport_module(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PiccodeScriptListener ) ((PiccodeScriptListener)listener).exitImport_module(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PiccodeScriptVisitor ) return ((PiccodeScriptVisitor<? extends T>)visitor).visitImport_module(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Import_moduleContext import_module() throws RecognitionException {
		Import_moduleContext _localctx = new Import_moduleContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_import_module);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(IMPORT);
			setState(81);
			module_path();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Module_pathContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(PiccodeScriptParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PiccodeScriptParser.ID, i);
		}
		public List<TerminalNode> DOT() { return getTokens(PiccodeScriptParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(PiccodeScriptParser.DOT, i);
		}
		public Symbol_liftContext symbol_lift() {
			return getRuleContext(Symbol_liftContext.class,0);
		}
		public Module_pathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module_path; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PiccodeScriptListener ) ((PiccodeScriptListener)listener).enterModule_path(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PiccodeScriptListener ) ((PiccodeScriptListener)listener).exitModule_path(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PiccodeScriptVisitor ) return ((PiccodeScriptVisitor<? extends T>)visitor).visitModule_path(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Module_pathContext module_path() throws RecognitionException {
		Module_pathContext _localctx = new Module_pathContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_module_path);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(ID);
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT) {
				{
				{
				setState(84);
				match(DOT);
				setState(85);
				match(ID);
				}
				}
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(92);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(91);
				symbol_lift();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Symbol_liftContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(PiccodeScriptParser.LBRACE, 0); }
		public List<Symbol_entryContext> symbol_entry() {
			return getRuleContexts(Symbol_entryContext.class);
		}
		public Symbol_entryContext symbol_entry(int i) {
			return getRuleContext(Symbol_entryContext.class,i);
		}
		public TerminalNode RBRACE() { return getToken(PiccodeScriptParser.RBRACE, 0); }
		public List<TerminalNode> COMMA() { return getTokens(PiccodeScriptParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(PiccodeScriptParser.COMMA, i);
		}
		public Symbol_liftContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_symbol_lift; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PiccodeScriptListener ) ((PiccodeScriptListener)listener).enterSymbol_lift(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PiccodeScriptListener ) ((PiccodeScriptListener)listener).exitSymbol_lift(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PiccodeScriptVisitor ) return ((PiccodeScriptVisitor<? extends T>)visitor).visitSymbol_lift(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Symbol_liftContext symbol_lift() throws RecognitionException {
		Symbol_liftContext _localctx = new Symbol_liftContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_symbol_lift);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(LBRACE);
			setState(95);
			symbol_entry();
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(96);
				match(COMMA);
				setState(97);
				symbol_entry();
				}
				}
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(103);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Symbol_entryContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PiccodeScriptParser.ID, 0); }
		public Symbol_liftContext symbol_lift() {
			return getRuleContext(Symbol_liftContext.class,0);
		}
		public Symbol_entryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_symbol_entry; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PiccodeScriptListener ) ((PiccodeScriptListener)listener).enterSymbol_entry(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PiccodeScriptListener ) ((PiccodeScriptListener)listener).exitSymbol_entry(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PiccodeScriptVisitor ) return ((PiccodeScriptVisitor<? extends T>)visitor).visitSymbol_entry(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Symbol_entryContext symbol_entry() throws RecognitionException {
		Symbol_entryContext _localctx = new Symbol_entryContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_symbol_entry);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(ID);
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LBRACE) {
				{
				setState(106);
				symbol_lift();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PiccodeScriptParser.ID, 0); }
		public TerminalNode CC() { return getToken(PiccodeScriptParser.CC, 0); }
		public ModuleContext module() {
			return getRuleContext(ModuleContext.class,0);
		}
		public FuncContext func() {
			return getRuleContext(FuncContext.class,0);
		}
		public Import_moduleContext import_module() {
			return getRuleContext(Import_moduleContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PiccodeScriptListener ) ((PiccodeScriptListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PiccodeScriptListener ) ((PiccodeScriptListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PiccodeScriptVisitor ) return ((PiccodeScriptVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(ID);
			setState(110);
			match(CC);
			setState(114);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MODULE:
				{
				setState(111);
				module();
				}
				break;
			case LPAREN:
				{
				setState(112);
				func();
				}
				break;
			case IMPORT:
				{
				setState(113);
				import_module();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleContext extends ParserRuleContext {
		public TerminalNode MODULE() { return getToken(PiccodeScriptParser.MODULE, 0); }
		public TerminalNode LBRACE() { return getToken(PiccodeScriptParser.LBRACE, 0); }
		public Module_stmtsContext module_stmts() {
			return getRuleContext(Module_stmtsContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(PiccodeScriptParser.RBRACE, 0); }
		public ModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PiccodeScriptListener ) ((PiccodeScriptListener)listener).enterModule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PiccodeScriptListener ) ((PiccodeScriptListener)listener).exitModule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PiccodeScriptVisitor ) return ((PiccodeScriptVisitor<? extends T>)visitor).visitModule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleContext module() throws RecognitionException {
		ModuleContext _localctx = new ModuleContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_module);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(MODULE);
			setState(117);
			match(LBRACE);
			setState(118);
			module_stmts();
			setState(119);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Module_stmtsContext extends ParserRuleContext {
		public List<Module_stmtContext> module_stmt() {
			return getRuleContexts(Module_stmtContext.class);
		}
		public Module_stmtContext module_stmt(int i) {
			return getRuleContext(Module_stmtContext.class,i);
		}
		public Module_stmtsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module_stmts; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PiccodeScriptListener ) ((PiccodeScriptListener)listener).enterModule_stmts(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PiccodeScriptListener ) ((PiccodeScriptListener)listener).exitModule_stmts(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PiccodeScriptVisitor ) return ((PiccodeScriptVisitor<? extends T>)visitor).visitModule_stmts(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Module_stmtsContext module_stmts() throws RecognitionException {
		Module_stmtsContext _localctx = new Module_stmtsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_module_stmts);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(121);
				module_stmt();
				}
				}
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Module_stmtContext extends ParserRuleContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public Var_declContext var_decl() {
			return getRuleContext(Var_declContext.class,0);
		}
		public Module_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PiccodeScriptListener ) ((PiccodeScriptListener)listener).enterModule_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PiccodeScriptListener ) ((PiccodeScriptListener)listener).exitModule_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PiccodeScriptVisitor ) return ((PiccodeScriptVisitor<? extends T>)visitor).visitModule_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Module_stmtContext module_stmt() throws RecognitionException {
		Module_stmtContext _localctx = new Module_stmtContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_module_stmt);
		try {
			setState(129);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(127);
				declaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(128);
				var_decl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncContext extends ParserRuleContext {
		public Func_argsContext func_args() {
			return getRuleContext(Func_argsContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(PiccodeScriptParser.ASSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public FuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PiccodeScriptListener ) ((PiccodeScriptListener)listener).enterFunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PiccodeScriptListener ) ((PiccodeScriptListener)listener).exitFunc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PiccodeScriptVisitor ) return ((PiccodeScriptVisitor<? extends T>)visitor).visitFunc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncContext func() throws RecognitionException {
		FuncContext _localctx = new FuncContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_func);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			func_args();
			setState(132);
			match(ASSIGN);
			setState(133);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Func_argsContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(PiccodeScriptParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(PiccodeScriptParser.RPAREN, 0); }
		public Arg_listContext arg_list() {
			return getRuleContext(Arg_listContext.class,0);
		}
		public Func_argsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_args; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PiccodeScriptListener ) ((PiccodeScriptListener)listener).enterFunc_args(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PiccodeScriptListener ) ((PiccodeScriptListener)listener).exitFunc_args(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PiccodeScriptVisitor ) return ((PiccodeScriptVisitor<? extends T>)visitor).visitFunc_args(this);
			else return visitor.visitChildren(this);
		}
	}
